# phonofix

./: .gitignore  CHANGELOG.md  CHANGELOG.zh-TW.md  CLAUDE.md  CODE_REVIEW_REPORT.md  COMPREHENSIVE_FUZZY_ANALYSIS.md  CORRECTOR_ARCHITECTURE_ANALYSIS.md  CORRECTOR_REFACTORING_PROGRESS_REPORT.md  CORRECTOR_REFACTORING_TODO.md  FUZZY_GENERATOR_ANALYSIS.md  JAPANESE_EXPANSION_SPEC.md  LANGUAGES_REFACTOR_PLAN.md  MIGRATION_0.2_TO_0.3.md  PHASE_2_3_4_IMPLEMENTATION_PLAN.md  PHASE_4_COMPLETION_REPORT.md  PHONEMIZER_MIGRATION_PLAN.md  README.md  README.zh-TW.md  SINGLETON_ARCHITECTURE_PLAN.md  TODO_JAPANESE_EXPANSION.md  TODO_MULTI_LANGUAGE.md  WORKTREE_INFO.md  analysus.md  debug_test.py  pyproject.toml  reproduce_issue.py  requirements.txt  snapshot.md  snapshot.zh-TW.md  snapshot_v2.py  test_ipa_to_spelling.py  test_ipa_to_spelling_realistic.py  test_ipa_variants.py  test_refactored_generator.py
backups/: auto_correct_examples.py  chinese_text_corrector.py  chinese_text_corrector_backup.py  corrector_v1.py  corrector_v2 copy.py  examples.py  fuzzy_dict_generator.py  fuzzy_toolbox_v1.py  mixed_language_correction.py  phonetic_config.py
backups/chinese_text_corrector/: __init__.py
chinese_text_corrector/core/: __init__.py  phonetic_config.py  phonetic_utils.py
chinese_text_corrector/correction/: corrector.py
chinese_text_corrector/dictionary/: generator.py
docs/: CHANGELOG.md  DICTIONARY_ORGANIZATION.md  DISTANCE_WEIGHTING_FEATURE.md  MULTI_LANGUAGE_EXPANSION.md  PHONEMIZER_SETUP.md  什麼是上帝的道_完整的.txt
examples/: auto_correct_examples.py  chinese_examples.py  english_examples.py  examples.py  japanese_examples.py  mixed_language_examples.py  realtime_streaming_demo.py  realtime_streaming_examples.py  streaming_demo.py  timing_demo.py
multi_language_corrector/: __init__.py  config.py
multi_language_corrector/backend/: __init__.py  base.py  chinese_backend.py  english_backend.py
multi_language_corrector/core/: tokenizer_interface.py
multi_language_corrector/correction/: unified_corrector.py
multi_language_corrector/engine/: __init__.py  base.py  chinese_engine.py  english_engine.py  unified_engine.py
references/: API_Documentation.md  BaseFuzzyGenerator_Design_Guide.md  IPA_Fuzzy_Generation_Guide.md  corrector.py  fuzzy_toolbox.py
scripts/: setup_espeak.ps1  setup_espeak_windows.bat
src/phonofix/: __init__.py  config.py
tests/: __init__.py  test_cache_performance.py  test_chinese_corrector.py  test_chinese_fuzzy_refactored.py  test_concurrency.py  test_engine.py  test_english_corrector.py  test_english_fuzzy_ipa.py  test_english_fuzzy_refactored.py  test_fuzzy_generator_base.py  test_japanese_corrector.py  test_japanese_kanji_logic.py  test_japanese_kanji_variants.py  test_language_contracts.py  test_performance_guards.py  test_unified_architecture.py  test_unified_corrector.py
tools/: benchmark_phonetic.py  translation_client.py
(+77 files in other folders)
